--- a/force-app/main/default/aura/StudyListView/StudyListView.cmp
+++ b/force-app/main/default/aura/StudyListView/StudyListView.cmp
@@ -19,6 +19,7 @@
     <aura:attribute name="currentTrialId" type="String"/>
     <aura:attribute name="isInitialized" type="Boolean" default="false"/>
     <aura:attribute name="isSearchResume" type="Boolean" default="false"/>
+    <aura:attribute name="searchResumeChanged" type="Boolean" default="false" access="private"/>
     <aura:attribute name="peStatusesPathList" type="List"/>
     <aura:attribute name="peStatusStateMap" type="Map"/>
 
@@ -28,9 +29,10 @@
     <aura:attribute name="currentPageList" type="List"/>
     <aura:attribute name="skipUpdate" type="Boolean" default="false" access="private"/>
 
-    <aura:handler name="change" value="{!v.paginationData}" action="{!c.doUpdateRecords}"/>
-    <aura:handler name="change" value="{!v.filterData}" action="{!c.doUpdateRecords}"/>
-    <aura:handler name="change" value="{!v.sortData}" action="{!c.doUpdateRecords}"/>
+    <aura:handler name="change" value="{!v.paginationData.pageRecordsCount}" action="{!c.doUpdateRecordsWithFirstPage}"/>
+    <aura:handler name="change" value="{!v.paginationData.currentPage}" action="{!c.doUpdateRecords}"/>
+    <aura:handler name="change" value="{!v.filterData}" action="{!c.doUpdateRecordsWithFirstPage}"/>
+    <aura:handler name="change" value="{!v.sortData}" action="{!c.doUpdateRecordsWithFirstPage}"/>
 
     <!-- Handlers: -->
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
@@ -73,7 +75,7 @@
                                 placeholder="Enrollment Status"
                                 class="{!v.isSearchResume ? 'slds-hide' : ''}"/>
                     <c:rrSelect value="{!v.filterData.therapeuticArea}" options="{!v.filterData.therapeuticAreas}"
-                                placeholder="Therapeutic Area"/>
+                                placeholder="All Therapeutic Areas"/>
                 </c:FilterPanel>
             </div>
 
