--- a/force-app/main/default/layouts/Visit__c-Visit Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Visit__c-Visit Layout.layout-meta.xml
@@ -22,6 +22,10 @@
                 <behavior>Edit</behavior>
                 <field>Icons__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Order__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
