--- a/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
+++ b/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
@@ -81,7 +81,8 @@
 
                 <div class="rr-all-content sticky-bar" id="stickyPositionTarget">
                     <c:RRAnchor aura:id="tabsTarget"/>
-                    <div class="tabs">
+                    <aura:if isTrue="{!!empty(v.studyDetail.tabs)}">
+                        <div class="tabs">
                         <div class="rr-width-limiter">
                             <c:RRTabSet >
                                 <!-- tabs: -->
@@ -128,6 +129,7 @@
                             </c:RRTabSet>
                         </div>
                     </div>
+                    </aura:if>
                     <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-about-the-study', '', ' collapsed')}">
                         <button class="apollo-btn text" data-anchor="aboutAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_SW_Link_About_The_Study}</button>
                         <button class="apollo-btn text" data-anchor="inclusionExclusionAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_SW_Link_Inclusion_Exclusion_Criteria}</button>
