--- a/force-app/main/default/aura/ParticipantStatePanel/ParticipantStatePanel.css
+++ b/force-app/main/default/aura/ParticipantStatePanel/ParticipantStatePanel.css
@@ -2,10 +2,13 @@
  * Created by Leonid Bartenev
  */
 .THIS {
+    position: relative;
+    border-right: 5px;
 }
 
-.THIS.psp-study-card{
+.THIS .psp-study-card{
     position: relative;
-    min-height: 200px;
+    min-height: 250px;
+    margin-bottom: 20px;
 }
 
