--- a/force-app/main/default/aura/PSECard/PSECard.cmp
+++ b/force-app/main/default/aura/PSECard/PSECard.cmp
@@ -5,22 +5,120 @@
 <aura:component description="PSECard">
 
     <!-- attributes: -->
+    <aura:attribute name="pe" type="Object"/>
     <aura:attribute name="pse" type="Object"/>
-    <aura:attribute name="psePath" type="List"/>
+    <aura:attribute name="steps" type="List"/>
+    <aura:attribute name="psePath" type="List" access="private"/>
+    <aura:attribute name="userMode" type="Boolean"/>
+
+    <!-- handlers: -->
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
     <!-- component body:-->
     <div class="rr-white-panel padding" style="position: relative">
-        <aura:if isTrue="{!!empty(v.pse)}">
-            <div>
-                <c:RRLink class="psec-title-link" label="{!v.pse.Clinical_Trial_Profile__r.Study_Code_Name__c}" page="{!'study-workspace?id=' + v.pse.Clinical_Trial_Profile__c}"/>
-            </div>
-            <div class="sponsor-name">{!v.pse.Clinical_Trial_Profile__r.Study_Sponsor__c}</div>
-            <div class="objective-section">
-                <div class="objective-text">{!v.pse.Clinical_Trial_Profile__r.Detailed_Description__c}</div>
-                <div class="objective-link">
-                    <c:RRLink page="{!'study-workspace?id=' + v.pse.Clinical_Trial_Profile__c}">{!$Label.c.BTN_Learn_More}<c:RRIcon iconName="icon-chevron-right"/></c:RRLink>
+        <aura:if isTrue="{!!empty(v.psePath)}">
+            <aura:if isTrue="{!v.userMode == 'Participant'}">
+                <div>
+                    <c:RRLink class="psec-title-link" label="{!v.pse.Clinical_Trial_Profile__r.Study_Code_Name__c}" page="{!'study-workspace?id=' + v.pse.Clinical_Trial_Profile__c}"/>
+                </div>
+                <div class="sponsor-name">{!v.pse.Clinical_Trial_Profile__r.Study_Sponsor__c}</div>
+                <div class="objective-section">
+                    <div class="objective-text">{!v.pse.Clinical_Trial_Profile__r.Detailed_Description__c}</div>
+                    <div class="objective-link">
+                        <c:RRLink page="{!'study-workspace?id=' + v.pse.Clinical_Trial_Profile__c}">{!$Label.c.BTN_Learn_More}<c:RRIcon iconName="icon-chevron-right"/></c:RRLink>
+                    </div>
+                </div>
+                <aura:set attribute="else">
+                    <div class="vpi-title link">{!v.pe.Participant__r.First_Name__c + ' ' + v.pe.Participant__r.Last_Name__c}</div>
+                </aura:set>
+            </aura:if>
+
+
+            <div class="vpi-clip-item-borders">
+                <div class="vpi-fields">
+
+                    <aura:if isTrue="{!v.userMode != 'Participant'}">
+                        <div class="vpi-field">
+                            <div class="label">{!$Label.c.PE_Study_Referred_To}</div>
+                            <div class="value">
+                                <c:RRLink label="{!v.pe.Study_Site__r.Clinical_Trial_Profile__r.Study_Code_Name__c}"
+                                          page="{!'study-workspace?id=' + v.pe.Study_Site__r.Clinical_Trial_Profile__c}"
+                                          maxWidth="250px"/>
+                            </div>
+                        </div>
+                    </aura:if>
+
+                    <aura:if isTrue="{!v.userMode == 'HCP'}">
+                        <div class="vpi-field">
+                            <div class="label">{!$Label.c.PE_Study_Site_Referred_To}</div>
+                            <div class="value">
+                                <c:RRLink label="{!v.pe.Study_Site__r.Name}"
+                                          maxWidth="250px"
+                                          page="{!'study-workspace?id=' + v.pe.Study_Site__r.Clinical_Trial_Profile__c + '&amp;tab=tab-referred-study-sites'}"/>
+                            </div>
+                        </div>
+                    </aura:if>
+
+                    <aura:if isTrue="{!v.userMode == 'PI'}">
+                        <div class="vpi-field">
+                            <div class="label">{!$Label.c.PE_Referring_provider}</div>
+                            <div class="value">
+                                <aura:if isTrue="{!!empty(v.pe.HCP__c)}">
+                                    <c:RRLink label="{!v.pe.HCP__r.HCP_Contact__r.Name}"
+                                              page="{!'clinic-profile?id=' + v.pe.HCP__r.HCP_Contact__r.AccountId}"
+                                              maxWidth="250px"/>
+                                    <aura:set attribute="else">{!v.pe.Referral_Source__c}</aura:set>
+                                </aura:if>
+                            </div>
+                        </div>
+                    </aura:if>
+
+                    <aura:if isTrue="{!v.userMode != 'Participant'}">
+                        <div class="vpi-field">
+                            <div class="label">{!$Label.c.PE_Referral_Id}</div>
+                            <div class="value">{!v.pe.Name}</div>
+                        </div>
+
+                        <div class="vpi-field">
+                            <div class="label">{!$Label.c.PE_Investigator_Recruitment_Expert}</div>
+                            <div class="value">{!v.pe.Study_Site__r.Principal_Investigator__r.Name}</div>
+                        </div>
+
+                        <div class="vpi-field">
+                            <div class="label">{!$Label.c.PE_Referred_Date}</div>
+                            <div class="value"><ui:outputDate value="{!v.pe.Referred_Date__c}"/></div>
+                        </div>
+
+                        <aura:if isTrue="{!v.pe.Participant__c}">
+                            <div class="vpi-field">
+                                <div class="label">{!$Label.c.PE_Patient_Id}</div>
+                                <div class="value">{!v.pe.Patient_ID__c}</div>
+                            </div>
+                            <div class="vpi-field">
+                                <div class="label">{!$Label.c.PE_Patient_Phone_number}</div>
+                                <div class="value">{!v.pe.Participant__r.Phone__c}</div>
+                            </div>
+                            <!--                        <div class="vpi-field">-->
+                            <!--                            <div class="label">{!$Label.c.PE_Country}</div>-->
+                            <!--                            <div class="value">{!v.pe.Participant__r.Mailing_Country__c}</div>-->
+                            <!--                        </div>-->
+                            <!--                        <aura:if isTrue="{!!empty(v.pe.Participant__r.Mailing_State__c)}">-->
+                            <!--                            <div class="vpi-field">-->
+                            <!--                                <div class="label">{!$Label.c.PE_State}</div>-->
+                            <!--                                <div class="value">{!v.pe.Participant__r.Mailing_State__c}</div>-->
+                            <!--                            </div>-->
+                            <!--                        </aura:if>-->
+                            <!--                        <aura:if isTrue="{!!empty(v.pe.Participant__r.Mailing_Zip_Postal_Code__c)}">-->
+                            <!--                            <div class="vpi-field">-->
+                            <!--                                <div class="label">{!$Label.c.PG_AS_F_Zip_Postal_Code}</div>-->
+                            <!--                                <div class="value">{!v.pe.Participant__r.Mailing_Zip_Postal_Code__c}</div>-->
+                            <!--                            </div>-->
+                            <!--                        </aura:if>-->
+                        </aura:if>
+                    </aura:if>
                 </div>
             </div>
+
             <c:PSEPath pathItems="{!v.psePath}" pseId="{!v.pse.Id}"/>
         </aura:if>
     </div>
