--- a/force-app/main/default/aura/RRIconSplitter/RRIconSplitter.cmp
+++ b/force-app/main/default/aura/RRIconSplitter/RRIconSplitter.cmp
@@ -1,18 +1,23 @@
 <!--
- - Created by user on 12.04.2019.
+ - Created by Igor Malyuta on 12.04.2019.
  -->
 
 <aura:component description="RRIconSplitter">
 
+    <!--attributes-->
     <aura:attribute name="value" type="String"/>
+    <aura:attribute name="hideMoreThan3" type="Boolean" default="false"/>
     <aura:attribute name="icons" type="List" access="private"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
-    <div class="icon-items">
+    <div class="icons">
         <aura:iteration items="{!v.icons}" var="icon">
             <c:RRIcon iconName="{!icon}" class="icon-item"/>
         </aura:iteration>
+        <aura:if isTrue="{!v.hideMoreThan3}">
+            <div class="dots">...</div>
+        </aura:if>
     </div>
 
 </aura:component>
