--- a/force-app/main/default/aura/RRIconSplitter/RRIconSplitter.css
+++ b/force-app/main/default/aura/RRIconSplitter/RRIconSplitter.css
@@ -1,12 +1,16 @@
 /**
- * Created by user on 12.04.2019.
+ * Created by Igor Malyuta on 12.04.2019.
  */
-.THIS .icon-items{
+.THIS.icons{
     display: inline-flex;
-    justify-content: space-evenly;
-    align-items: center;
 }
 
 .THIS .icon-item{
     padding-left: 10px;
+}
+
+.THIS .dots{
+    padding-left: 10px;
+    padding-top: 13px;
+    font-weight: bold;
 }
