--- a/force-app/main/default/aura/rrPagination/rrPagination.cmp
+++ b/force-app/main/default/aura/rrPagination/rrPagination.cmp
@@ -7,6 +7,7 @@
     <aura:attribute name="currentPage"      type="Integer" default="1"/>
     <aura:attribute name="totalPages"       type="Integer" default="1"/>
     <!--=============================================================================================================-->
+    <aura:handler name="init"               value="{!this}"                   action="{!c.resetPagination}"/>
     <aura:handler name="change"             value="{!v.allObjects}"           action="{!c.resetPagination}"/>
     <aura:handler name="change"             value="{!v.currentPage}"          action="{!c.setPage}"/>
     <aura:handler name="change"             value="{!v.entriesOnPage}"        action="{!c.resetPagination}"/>
