--- a/force-app/main/default/aura/CustomThemLayoutNoNavigation/CustomThemLayoutNoNavigation.cmp
+++ b/force-app/main/default/aura/CustomThemLayoutNoNavigation/CustomThemLayoutNoNavigation.cmp
@@ -4,13 +4,25 @@
 
 <aura:component description="CustomThemLayoutNoNavigation" implements="forceCommunity:themeLayout" extends="c:CheckLanguage">
 
+    <!-- attributes: -->
+    <aura:attribute name="mode" type="String"/>
+
+    <!-- handlers: -->
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+
+
     <aura:if isTrue="{!v.languageChecked}">
         <div class="rr-all-content">
             <div class="rr-header-content">
                 <div class="rr-width-limiter side-padding header-block">
                     <div class="logo-click" onclick="{!c.doGoHome}">
                         <!--c:MySVG xlinkHref="{!$Resource.rr_community_icons + '/logo.svg#full-logo'}" class="logo-block"/-->
-                        <img src="{!$Resource.rr_community_icons + '/logo_3x.png'}" class="logo-block"/>
+                        <aura:if isTrue="{!or(v.mode == 'Participant', v.mode == 'Delegate')}">
+                            <img src="{!$Resource.PH_logo + '/Logo@3x.png'}" class="logo-block"/>
+                            <aura:set attribute="else">
+                                <img src="{!$Resource.rr_community_icons + '/logo_3x.png'}" class="logo-block"/>
+                            </aura:set>
+                        </aura:if>
                     </div>
                 </div>
             </div>
