--- a/force-app/main/default/aura/PSECard/PSECard.css
+++ b/force-app/main/default/aura/PSECard/PSECard.css
@@ -38,6 +38,11 @@
     flex-shrink: 0;
 }
 
+.THIS .vpi-path-panel{
+    background-color: #F8F9FB;
+    border: 1px solid #D9D9D9;
+    border-radius: 5px;
+}
 
 .THIS .vpi-path-panel .collapse-section.opened{
     background-color: white;
