--- a/force-app/main/default/aura/InfoModal/InfoModal.cmp
+++ b/force-app/main/default/aura/InfoModal/InfoModal.cmp
@@ -23,7 +23,7 @@
                 <div class="im-info">
                     <div class="im-name">
                         <aura:if isTrue="{!!empty(v.HCPEnrollment)}">
-                                {!$Label.c.PG_DBPI_Dr + v.HCPEnrollment.HCP_Contact__r.FirstName + ' ' + v.HCPEnrollment.HCP_Contact__r.LastName}
+                                {!v.HCPEnrollment.HCP_Contact__r.Salutation + v.HCPEnrollment.HCP_Contact__r.FirstName + ' ' + v.HCPEnrollment.HCP_Contact__r.LastName}
                         </aura:if>
                     </div>
                     <div class="im-clinic-name">
