--- a/force-app/main/default/aura/MedicalRecordReview/MedicalRecordReview.cmp
+++ b/force-app/main/default/aura/MedicalRecordReview/MedicalRecordReview.cmp
@@ -40,8 +40,8 @@
                                 <c:RRIcon iconName="chart-review-sent" class="rr-card-ico"/>
                                 <div class="rr-secondary-text" style="padding-top: 4px">{!$Label.c.PG_MRR_L_Please_complete_medical_record_review_for}</div>
                                 <aura:if isTrue="{!!empty(v.hcpEnrollment)}">
-                                    <div class="rr-primary-text">{!$Label.c.PG_DBPI_Dr} {!v.hcpEnrollment.HCP_Contact__r.Name}</div>
-                                    <div class="rr-secondary-text">{!$Label.c.PG_DBPI_at} {!v.hcpEnrollment.Study_Site__r.Name}</div>
+                                    <div class="rr-primary-text">{!v.hcpEnrollment.HCP_Contact__r.Name} {!v.hcpEnrollment.HCP_Contact__r.Name}</div>
+                                    <div class="rr-secondary-text">{!$Label.c.PG_DBPI_at + ' ' + v.hcpEnrollment.Study_Site__r.Name}</div>
                                 </aura:if>
                             </div>
                             <div class="rr-secondary-text" style="padding-top: 20px">{!$Label.c.PG_MRR_Note_Remember}</div>
