--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
@@ -119,7 +119,7 @@
         <aura:if isTrue="{!v.userMode == 'HCP'}">
             <div style="background-color: #f2f2f2; min-height: 43px; box-sizing: border-box; padding-top: 12px;">
                 <div class="slds-grid slds-wrap slds-p-horizontal_medium">
-                    <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-2
+                    <div class="slds-col slds-size_1-of-1 slds-medium-size_5-of-12
                                 slds-order_4 slds-medium-order_1 slds-m-vertical_x-small">
                         <div>
                             <div class="{!or(v.searchItem, !v.currentStudy.hasActiveHCPEnrollments)? 'slds-hide' : ''}">
@@ -144,10 +144,10 @@
                             </aura:if>
                         </div>
                     </div>
-                    <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-6
+                    <div class="slds-col slds-size_1-of-1 slds-medium-size_3-of-12
                                 slds-order_3 slds-medium-order_2 slds-m-vertical_x-small">
                         <div class="slvi-status-item">
-                            <aura:if isTrue="{!and(v.currentStudy.distance != null, v.currentStudy.hasActiveHCPEnrollments)}">
+                            <aura:if isTrue="{!v.currentStudy.distance != null}">
                                 <div style="float: left;">
                                     <c:RRIcon class="slvi-status-icon blue-icon" iconName="map-marker"/>
                                 </div>
