Resource Dashboard mobile view.

--- a/force-app/main/default/aura/ResourceDashboardCard/ResourceDashboardCard.cmp
+++ b/force-app/main/default/aura/ResourceDashboardCard/ResourceDashboardCard.cmp
@@ -24,13 +24,13 @@
             </div>
             <aura:set attribute="else">
                 <div class="resource-content">
-                    <lightning:layout horizontalAlign="center">
+                    <lightning:layout horizontalAlign="center" multipleRows="true">
 
-                        <lightning:layoutItem size="6" flexibility="auto">
+                        <lightning:layoutItem smallDeviceSize="12" mediumDeviceSize="12" largeDeviceSize="6" size="12" flexibility="auto">
                             <c:ResourceDashboardCardItem resourceType="Video" trialId="{!v.trialId}"
                                                          resourcesLoading="{!v.resourcesLoading[0]}"/>
                         </lightning:layoutItem>
-                        <lightning:layoutItem size="6" flexibility="auto">
+                        <lightning:layoutItem smallDeviceSize="12" mediumDeviceSize="12" largeDeviceSize="6" size="12" flexibility="auto">
                             <c:ResourceDashboardCardItem resourceType="Article" trialId="{!v.trialId}"
                                                          resourcesLoading="{!v.resourcesLoading[1]}"/>
                         </lightning:layoutItem>
