--- a/force-app/main/default/aura/ResourceDashboardCard/ResourceDashboardCard.css
+++ b/force-app/main/default/aura/ResourceDashboardCard/ResourceDashboardCard.css
@@ -1,7 +1,7 @@
 .THIS.resource-card {
 	width: 100%;
 	max-height: 100%;
-	min-width: 562px;
+	min-width: 100%;
 	position: relative;
 }
 
@@ -37,4 +37,10 @@
 	font-family: "Proxima Nova";
 	font-size: 17px;
 	line-height: 26px;
+}
+
+@media (max-width: 1024px) {
+	.THIS .resource-card-title {
+		margin-left: 2%;
+	}
 }
