--- a/force-app/main/default/layouts/Resource__c-Study Document.layout-meta.xml
+++ b/force-app/main/default/layouts/Resource__c-Study Document.layout-meta.xml
@@ -20,8 +20,8 @@
                 <field>Description__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Required</behavior>
-                <field>Content_Type__c</field>
+                <behavior>Edit</behavior>
+                <field>Video__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Required</behavior>
