--- a/force-app/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
@@ -43,6 +43,18 @@
                 <behavior>Edit</behavior>
                 <field>Participant_Dropped_Out__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Day_of_Birth__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Initials__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Gender__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
