--- a/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
+++ b/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
@@ -32,123 +32,9 @@
             <div style="height: 250px"></div>
         </aura:if>
         <aura:if isTrue="{!!empty(v.pe)}">
-            <aura:if isTrue="{!v.pe.Participant__c}">
-                <aura:if isTrue="{!v.userMode == 'Participant'}">
-                    <div class="vpi-title link" onclick="{!c.doGoToStudyWorkspace}">{!v.pe.Study_Site__r.Clinical_Trial_Profile__r.Study_Code_Name__c}</div>
-                    <aura:set attribute="else">
-                        <div class="vpi-title link" onclick="{!c.doGoToProfile}">{!v.pe.Participant__r.First_Name__c + ' ' + v.pe.Participant__r.Last_Name__c}</div>
-                    </aura:set>
-                </aura:if>
-            </aura:if>
-            <aura:if isTrue="{!empty(v.pe.Participant__c)}">
-                <div class="vpi-title">{!v.pe.Patient_ID__c + if(v.peAdditionalName, ' (' + v.peAdditionalName + ')', '')}</div>
-            </aura:if>
-            <div class="vpi-clip-item-borders">
-                <div class="vpi-fields">
+            <c:ParticipantCardHeader userMode="{!v.userMode}" pe="{!v.pe}"/>
+`           <c:ParticipantCardFields userMode="{!v.userMode}" pe="{!v.pe}"/>
 
-                    <aura:if isTrue="{!v.userMode != 'Participant'}">
-                        <div class="vpi-field">
-                            <div class="label">{!$Label.c.PE_Study_Referred_To}</div>
-                            <div class="value">
-                                <c:RRLink label="{!v.pe.Study_Site__r.Clinical_Trial_Profile__r.Study_Code_Name__c}"
-                                          page="{!'study-workspace?id=' + v.pe.Study_Site__r.Clinical_Trial_Profile__c}"
-                                          maxWidth="250px"/>
-                            </div>
-                        </div>
-                    </aura:if>
-
-                    <aura:if isTrue="{!v.userMode == 'HCP'}">
-                        <div class="vpi-field">
-                            <div class="label">{!$Label.c.PE_Study_Site_Referred_To}</div>
-                            <div class="value">
-                                <c:RRLink label="{!v.pe.Study_Site__r.Name}"
-                                          maxWidth="250px"
-                                          page="{!'study-workspace?id=' + v.pe.Study_Site__r.Clinical_Trial_Profile__c + '&amp;tab=tab-referred-study-sites'}"/>
-                            </div>
-                        </div>
-                    </aura:if>
-
-                    <aura:if isTrue="{!v.userMode == 'PI'}">
-                        <div class="vpi-field">
-                            <div class="label">{!$Label.c.PE_Referring_provider}</div>
-                            <div class="value">
-                                <aura:if isTrue="{!!empty(v.pe.HCP__c)}">
-                                    <c:RRLink label="{!v.pe.HCP__r.HCP_Contact__r.Name}"
-                                              page="{!'clinic-profile?id=' + v.pe.HCP__r.HCP_Contact__r.AccountId}"
-                                              maxWidth="250px"/>
-                                    <aura:set attribute="else">{!v.pe.Referral_Source__c}</aura:set>
-                                </aura:if>
-                            </div>
-                        </div>
-                    </aura:if>
-
-                    <aura:if isTrue="{!v.userMode == 'Participant'}">
-
-                        <div class="vpi-field">
-                            <div class="label">{!$Label.c.PE_Investigator_Name}</div>
-                            <div class="value">{!v.pe.PI_Contact__r.Name}</div>
-                        </div>
-
-                        <div class="vpi-field">
-                            <div class="label">{!$Label.c.Investigator_phone}</div>
-                            <div class="value">{!v.pe.PI_Contact__r.Phone}</div>
-                        </div>
-
-                        <div class="vpi-field">
-                            <div class="label">{!$Label.c.PE_Site_Name}</div>
-                            <div class="value">{!v.pe.Study_Site__r.Site__r.Name}</div>
-                        </div>
-
-                        <div class="vpi-field">
-                            <div class="label">{!$Label.c.PE_Site_Address}</div>
-                            <div class="value">{!v.pe.Study_Site__r.Site__r.BillingStreet}</div>
-                        </div>
-
-                    </aura:if>
-
-                    <div class="vpi-field">
-                        <div class="label">{!$Label.c.PE_Referral_Id}</div>
-                        <div class="value">{!v.pe.Name}</div>
-                    </div>
-
-                    <div class="vpi-field">
-                        <div class="label">{!$Label.c.PE_Investigator_Recruitment_Expert}</div>
-                        <div class="value">{!v.pe.Study_Site__r.Principal_Investigator__r.Name}</div>
-                    </div>
-
-                    <div class="vpi-field">
-                        <div class="label">{!$Label.c.PE_Referred_Date}</div>
-                        <div class="value"><ui:outputDate value="{!v.pe.Referred_Date__c}"/></div>
-                    </div>
-
-                    <aura:if isTrue="{!v.pe.Participant__c}">
-                        <div class="vpi-field">
-                            <div class="label">{!$Label.c.PE_Patient_Id}</div>
-                            <div class="value">{!v.pe.Patient_ID__c}</div>
-                        </div>
-                        <div class="vpi-field">
-                            <div class="label">{!$Label.c.PE_Patient_Phone_number}</div>
-                            <div class="value">{!v.pe.Participant__r.Phone__c}</div>
-                        </div>
-<!--                        <div class="vpi-field">-->
-<!--                            <div class="label">{!$Label.c.PE_Country}</div>-->
-<!--                            <div class="value">{!v.pe.Participant__r.Mailing_Country__c}</div>-->
-<!--                        </div>-->
-<!--                        <aura:if isTrue="{!!empty(v.pe.Participant__r.Mailing_State__c)}">-->
-<!--                            <div class="vpi-field">-->
-<!--                                <div class="label">{!$Label.c.PE_State}</div>-->
-<!--                                <div class="value">{!v.pe.Participant__r.Mailing_State__c}</div>-->
-<!--                            </div>-->
-<!--                        </aura:if>-->
-<!--                        <aura:if isTrue="{!!empty(v.pe.Participant__r.Mailing_Zip_Postal_Code__c)}">-->
-<!--                            <div class="vpi-field">-->
-<!--                                <div class="label">{!$Label.c.PG_AS_F_Zip_Postal_Code}</div>-->
-<!--                                <div class="value">{!v.pe.Participant__r.Mailing_Zip_Postal_Code__c}</div>-->
-<!--                            </div>-->
-<!--                        </aura:if>-->
-                    </aura:if>
-                </div>
-            </div>
             <aura:if isTrue="{!v.showPath}">
                 <div class="vpi-path-panel">
                     <div class="path-section">
