change icon for study documents

--- a/force-app/main/default/aura/StudyDocumentContainer/StudyDocumentContainer.css
+++ b/force-app/main/default/aura/StudyDocumentContainer/StudyDocumentContainer.css
@@ -36,6 +36,11 @@
     width: 23%;
 }
 
+.THIS .resources-icon-pdf {
+    height: 26px;
+    width: 22px;
+}
+
 .THIS .study-document-summary {
     text-align: left;
 }
