--- a/force-app/main/default/aura/StudyDocumentContainer/StudyDocumentContainer.cmp
+++ b/force-app/main/default/aura/StudyDocumentContainer/StudyDocumentContainer.cmp
@@ -32,7 +32,7 @@
                             <div class="resource-pointer"
                                  data-type="{!v.resourceWrappers[0].resource.RecordType.DeveloperName}"
                                  data-id="{!v.resourceWrappers[0].resource.Id}" onclick="{!c.navigateToPage}">
-                                <c:RRIcon iconName="icon-file-pdf"/>
+                                <c:RRIcon iconName="icon-pdf" class="resources-icon-pdf"/>
                             </div>
                         </td>
                         <td class="study-document-column-data study-document-title-data">
